Make this responsive

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <div class="container">
       <section class="section1">
-        <div class="des" >Wedding Day Countdown</div>
-        <div class="names" >Hello Guys</div>
+          <div class="des">Wedding Day Countdown</div>
+          <div class="names">Mukesh <span class="red">Weds</span> Komal</div>
+          <div class="date">23 June, 2023</div>
       </section>
       <section class="section2">
         <img src="/wedimg.png" alt="" />
