Make folder for image and responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="date">23 June, 2023</div>
       </section>
       <section class="section2">
-        <img src="/wedimg.png" alt="" />
+        <img src="./img/wedimg.png" alt="" />
         <div id="countdown">
           <div id="tiles"></div>
           <div class="labels">
@@ -25,7 +25,7 @@
             <li>Secs</li>
           </div>
         </div>
-        <img src="/wedimg2.png" alt="" />
+        <img src="./img/wedimg2.png" alt="" />
       </section>
     </div>
     <script src="script.js"></script>
